--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=7" />
     <meta
       name="description"
-      content="join showmeelove waitlist || let your fans show you love for your contents!"
+      content="let your fans show you love through donations, membership plans or selling anything you like!"
     />
     <meta
       name="keywords"
       content="showmeelove, content creators, writers, podcasters, comedians, developers, community, musicians"
     />
-    <meta name="authot"
-    content="showmelove development team">
+    <meta name="authot" content="showmelove development team" />
     <title>showmeelove || Home</title>
   </head>
   <body>
