--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       content="showmeelove, content creators, writers, podcasters, comedians, developers, community, musicians"
     />
     <meta name="authot" content="showmelove development team" />
-    <title>showmeelove || Home</title>
+    <title>showmeelove</title>
   </head>
   <body>
     <div id="root"></div>
